# DevanagriTextRecognizer

./: CMakeLists.txt  README.md
include/: recognizer.h
src/: main.cpp  recognizer.cpp
